--- a/myppmtool/src/main/resources/application.properties
+++ b/myppmtool/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://localhost:3306/ppmtool_dev
+spring.datasource.username=root
+spring.datasource.password=root#1234
